making my main python app OOP instead of functional. Making a main section in the namespace to be imported into the flask template context

--- a/app/templates/arrivals.html
+++ b/app/templates/arrivals.html
@@ -5,7 +5,9 @@
     <div id = "busform">
     <h4> Times for bus {{ bus }} at stop {{ stop }}
     <ul>
-      <li></li>
+      {% for bustimes in list%}
+      <li>Arriving at {{ bustime }}</li>
+       {% endfor %}
     </ul>
   </div>
   </div>
