I tied in the backend busbud script by loading as a module in routes.py. Got tied into template as well. Still needs some work. It pull data everytime you press the button for time. A database sounds like it could be a great idea to pull cached data from

--- a/app/templates/arrivals.html
+++ b/app/templates/arrivals.html
@@ -5,9 +5,9 @@
     <div id = "busform">
     <h4> Times for bus {{ bus }} at stop {{ stop }}
     <ul>
-      {% for bustimes in list%}
-      <li>Arriving at {{ bustime }}</li>
-       {% endfor %}
+      {% for i in list %}
+      <li>Arriving {{i}}</li>
+      {% endfor %}
     </ul>
   </div>
   </div>
