--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,12 +4,14 @@
     <h2>Busbuddy</h2>
     <div id = "busform">
     <form action="/post" method= "post" >
-      <label for="">Route :</label>
 
-      <input type="text" name="bus" value=""><br>
       <label for="">Bus ID:</label>
+      <input type="text" name="bus" value=""><br>
 
+
+      <label for="">Stop ID:</label>
       <input type="text" name="stop" value="">
+
       <input type="submit" name="Find Arrivals" value="getarrivals">
     </form>
   </div>
