--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -10,7 +10,7 @@ body {
  */
 
 header {
-  background-color: #2B2B2B;
+  background-color:  #99ddff;
   height: 35px;
   width: 100%;
   opacity: .9;
@@ -60,7 +60,7 @@ h3 {
   margin-top: 30px;
   text-align: center;
   letter-spacing: -1px;
-  color: #999;
+  color: #999999;
 }
 
 /*
@@ -85,8 +85,15 @@ h3 {
   text-decoration: none;
 }
 
-div #busform{
+#busform{
   margin-left: auto;
   margin-right: auto;
   padding:40px;
+  text-align: center;
+}
+
+.container p{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
