--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,17 +2,20 @@
 {% block content %}
   <div class="jumbo">
     <h2>Busbuddy</h2>
+    <p>
+      For Denver RTD Transit System
+    </p>
     <div id = "busform">
     <form action="/post" method= "post" >
 
       <label for="">Bus ID:</label>
-      <input type="text" name="bus" value=""><br>
+      <input type="text" name="bus" value="0"><br>
 
 
       <label for="">Stop ID:</label>
-      <input type="text" name="stop" value="">
+      <input type="text" name="stop" value="14986">
 
-      <input type="submit" name="Find Arrivals" value="getarrivals">
+      <input type="submit" name="Find Arrivals" value="Get Arrivals">
     </form>
   </div>
   </div>
