making sure procfile and others are all there to lunch on heroku

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">;
 
     <div class="container">
-    <h1 class="logo">BusBuddy</h1>
+    <!-- <h1 class="logo">BusBuddy</h1> -->
     <strong><nav>
       <ul class="menu">
         <li style="color:white;"><a href="{{ url_for('home') }}">Home</a></li>
