--- a/app/templates/warning.html
+++ b/app/templates/warning.html
@@ -6,6 +6,10 @@
       For Denver RTD Transit System
     </p>
 
+    <div class="warning">
+      <h4>Use less then 6 characters<h4>
+      </div>
+
     <div id = "busform">
     <form action="/post" method= "post" >
 
