--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,5 +2,6 @@
 
 {% block content %}
   <h2>About</h2>
-  <p>This app pulls data from the Denver Transit RTD in real-time letting you know exactly when you bus will be at it's stop<p>
+  <p>Bus Buddy uses Denver RTD realtime transit data to get you to where you want to go faster.<p>
+  <p>Built by <a href = "http://ispeakcomputer.com"> I Speak Computer</a><p>
 {% endblock %}
