--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,7 @@ header h1.logo:hover {
 .container {
   width: 400px;
   margin: 0 auto;
+  margin-bottom: 15px;
 }
 
 div.jumbo {
@@ -82,11 +83,11 @@ h3 {
 
 .menu li {
   display: inline;
+  color: #FFFFFF;
 }
 
 .menu li {
-  margin-left: 20px;
-  margin-left: 10px;
+  margin-left: 5px;
   padding: 5px;
   /*background-color: red;*/
 }
@@ -114,6 +115,17 @@ h3 {
  nav{
    width: 400px;
  }
+.warning{
+   color: #FF0000;
+   -webkit-border-radius: 6px;
+      -moz-border-radius: 6px;
+           border-radius: 6px;
+    background-color: #FFFFFF;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    /*padding: 2px;*/
+ }
 
  @media only screen and (max-device-width: 400px) {
    nav{
@@ -126,6 +138,18 @@ h3 {
      margin: auto;
    }
    header {
+
      width: 90%;
      margin: auto;
+     padding-bottom: 5px;
+     margin-bottom: 10px;
+     margin-top: 5px;
  	}
+.myform{
+  margin-left: auto;
+  margin-right: auto;
+
+}
+#busform{
+  padding:20px;
+}
