--- a/templates/home.html
+++ b/templates/home.html
@@ -7,16 +7,21 @@
     </p>
 
     <div id = "busform">
+
     <form action="/post" method= "post" >
+      <div class="myform">
+        <label for="">Bus ID: </label>
+        <input type="text" name="bus" value="0"><br>
+      </div>
 
-      <label for="">Bus ID:</label>
-      <input type="text" name="bus" value="0"><br>
+      <div class="myform">
+       <label for="">Stop ID:</label>
+       <input type="text" name="stop" value="14986">
+      </div>
 
-
-      <label for="">Stop ID:</label>
-      <input type="text" name="stop" value="14986">
-
-      <input type="submit" name="Find Arrivals" value="Get Arrivals">
+      <div class="myform">
+       <input type="submit" name="Find Arrivals" value="Get Arrivals">
+      </div>
     </form>
   </div>
   </div>
