--- a/static/css/main.css
+++ b/static/css/main.css
@@ -130,7 +130,6 @@ h3 {
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 20px;
-   width: 300px;
  }
 
  @media only screen and (max-device-width: 400px) {
@@ -144,9 +143,8 @@ h3 {
      margin: auto;
    }
    header {
-
      width: 90%;
-     margin: auto;
+     /*margin: auto;*/
      padding-bottom: 5px;
      margin-bottom: 10px;
      margin-top: 5px;
