--- a/static/css/main.css
+++ b/static/css/main.css
@@ -135,12 +135,14 @@ h3 {
  @media only screen and (max-device-width: 400px) {
    nav{
      width: 90%;
-     margin: auto;
+     margin-left: auto;
+     margin-right: auto;
    }
 
    .container {
      width: 90%;
-     margin: auto;
+     margin-left: auto;
+     margin-right: auto;
    }
    header {
      width: 90%;
@@ -154,7 +156,6 @@ h3 {
   margin-right: auto;
   background-color: red;
   padding-bottom: 10px;
-
 }
 #busform{
   padding:20px;
