Looking real nice on mobile devices now.Got better sytlings

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,19 +9,19 @@
     <div id = "busform">
 
     <form action="/post" method= "post" >
-      <div class="myform">
+      <!-- <div class="myform"> -->
         <label for="">Bus ID: </label>
         <input type="text" name="bus" value="0"><br>
-      </div>
+      <!-- </div> -->
 
-      <div class="myform">
+      <!-- <div class="myform"> -->
        <label for="">Stop ID:</label>
        <input type="text" name="stop" value="14986">
-      </div>
+      <!-- </div> -->
 
-      <div class="myform">
+      <!-- <div class="myform"> -->
        <input type="submit" name="Find Arrivals" value="Get Arrivals">
-      </div>
+      <!-- </div> -->
     </form>
   </div>
   </div>
