--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,11 +141,15 @@ h3 {
 
    .container {
      width: 90%;
+     margin-left: 5%;
+     margin-right: 5%;
      margin-left: auto;
      margin-right: auto;
    }
    header {
      width: 90%;
+     margin-left: 5%;
+     margin-right: 5%;
      /*margin: auto;*/
      padding-bottom: 5px;
      margin-bottom: 10px;
