--- a/static/css/main.css
+++ b/static/css/main.css
@@ -132,7 +132,7 @@ h3 {
    padding-bottom: 20px;
  }
 
- @media only screen and (max-device-width: 400px) {
+ /*@media only screen and (max-device-width: 400px) {
    nav{
      width: 90%;
      margin-left: auto;
@@ -150,7 +150,6 @@ h3 {
      width: 90%;
      margin-left: 5%;
      margin-right: 5%;
-     /*margin: auto;*/
      padding-bottom: 5px;
      margin-bottom: 10px;
      margin-top: 5px;
@@ -164,4 +163,4 @@ h3 {
 #busform{
   padding:20px;
 }
-}
+}*/
