Looking real nice on mobile devices now.Got better sytlings

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,8 @@
   <head>
     <title>BusBuddy</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 </head>
     <div class="container">
     <!-- <h1 class="logo">BusBuddy</h1> -->
