--- a/static/css/main.css
+++ b/static/css/main.css
@@ -154,6 +154,12 @@ h3 {
      margin-bottom: 10px;
      margin-top: 5px;
  	}
+  header h1{
+    font-size: 1.3em;
+  }
+  header li{
+    font-size: 1.3em;
+  }
 .myform{
   margin-left: auto;
   margin-right: auto;
