--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
   <head>
     <title>BusBuddy</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
 
 </head>
 <body>
