--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BusBuddy</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"
-    <meta name="viewport" content="width=device-width">
 
 </head>
 <body>
