--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,7 @@ hr{ border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
  }
- 
+
 .nav_bar{
   /*margin-top: 2px;*/
   /*background-color: red;*/
@@ -114,8 +114,8 @@ input[type=text] {
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    font: 14px/100% Arial, Helvetica, sans-serif;
-    padding: 1em 5em 1em;
+    font: 25px/100% 'Anton', sans-serif;
+    padding: 1em 2em 1em;
     text-shadow: 0 1px 1px rgba(0,0,0,.3);
     -webkit-border-radius: .5em;
     -moz-border-radius: .5em;
